--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to your Trainer's App</h1>
 
-<% if session[:user_id] %>
+<% if user_signed_in? %>
  <h1><%= @user.name %></h1>
  <h2>Email: <%= @user.email %></h2>
  <h2>Facebook UID: <%= @user.uid %></h2>
@@ -8,3 +8,5 @@
 <% else %>
  <%= link_to('Log in with Facebook!', '/auth/facebook') %>
 <% end %>
+
+<% link_to trainers_path %>
