--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,12 +1,10 @@
 <h1>Welcome to your Trainer's App</h1>
 
 <% if user_signed_in? %>
- <h1><%= @user.name %></h1>
+ <h1>Name: <%= @user.name %></h1>
  <h2>Email: <%= @user.email %></h2>
  <h2>Facebook UID: <%= @user.uid %></h2>
  <img src="<%= @user.image %>">
 <% else %>
  <%= link_to('Log in with Facebook!', '/auth/facebook') %>
 <% end %>
-
-<% link_to trainers_path %>
