--- a/app/views/users/form_fields.html.erb
+++ b/app/views/users/form_fields.html.erb
@@ -1,10 +1,6 @@
 <div class=”field”>
-<%= f.label :first_name %><br>
-<%= f.text_field :first_name %>
-</div>
-<div class=”field”>
-  <%= f.label :last_name %><br>
-  <%= f.text_field :last_name %>
+<%= f.label :name %><br>
+<%= f.text_field :name %>
 </div>
 <div class=”field”>
   <%= f.label :email %><br>
