--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -1,6 +1,9 @@
+<h2>Trainer List</h2>
+link_to trainer.name
 <% @trainers.each do |trainer| %>
   <div "trainer>"<%= trainer.name %></div>
   <% if current_user.admin? %>
+    <div "trainer_link"><%= link_to "Show #{trainer.name}", trainers_path(trainers) %></div>
     <div "New_Trainer_link"><%= link_to "New Trainer", new_trainer_path %></div>
 
   <% else %>
