--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,3 +1,7 @@
+Trainer Show page
+Trainer name
+Trainer specialty
+Trainer bio
 <% @trainers.each do |trainer| %>
   <div "trainer>"<%= trainer.name %></div>
   <% if current_user.admin? %>
