--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -6,5 +6,8 @@
  <h2>Facebook UID: <%= @user.uid %></h2>
  <img src="<%= @user.image %>">
 <% else %>
+<%= link_to "Sign Up", signup_path %><br />
+<%= link_to "Log In", login_path %><br />
+
  <a href='/auth/facebook'>Login with Facebook</a>
 <% end %>
