--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Amusement Park</title>
-    <%= stylesheet_link_tag    "application", media: "all" %>
-    <%= javascript_include_tag "application" %>
-    <%= csrf_meta_tags %>
-    <%= analytics_init if Rails.env.production? %>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"></link>
+    <title>Trainer's App</title>
   </head>
   <body>
-    <!--  navbar -->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+          <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
