--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,8 +3,8 @@
   <p><%= f.text_field :name %></p>
   <p><%= f.label :email %></p>
   <p><%= f.text_field :email %></p>
-  <p><%= f.label :password %>: </p>
-  <p><%= f.text_field :password_digest %></p>
+  <p><%= f.label :password %> </p>
+  <p><%= f.text_field :password %></p>
 
   <p><%= f.submit %></p>
 <% end %>
