--- a/app/views/clients/form_fields.html.erb
+++ b/app/views/clients/form_fields.html.erb
@@ -1,11 +1,29 @@
-<div class=”field”>
-<%= f.label :name %><br>
-<%= f.text_field :name %>
-</div>
-<div class=”field”>
-  <%= f.label :email %><br>
-  <%= f.text_field :email %>
-</div>
+<%= form_for @client.new do |f| %>
+  <table>
+    <tr><td><%= f.label :name %> :
+      <%= f.text_field :name %></td></tr>
+    <tr><td> </td></tr>
+
+    <tr><td><%= f.label :email %> :
+      <%= f.text_field :email %></td></tr>
+    <tr><td> </td></tr>
+
+    <tr><td><%= f.label :home_address %> :
+      <%= f.text_field :home_address %></td></tr>
+    <tr><td> </td></tr>
+
+    <tr><td><%= f.label :work_address %> :
+      <%= f.text_field :work_address %></td></tr>
+    <tr><td> </td></tr>
+
+    <tr><td><%= f.label :home_phone %> :
+      <%= f.text_field :home_phone %></td></tr>
+    <tr><td> </td></tr>
+
+    <tr><td><%= f.label :work_phone %> :
+      <%= f.text_field :work_phone %></td></tr>
+    <tr><td> </td></tr>
+
 <div class=”actions”>
 <%= f.submit %>
 </div>
