--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,3 +1,3 @@
-<% if policy(@training_session).update? %>
-  <%= link_to "Edit training session", edit_training_session_path(@training_session) %>
+<% if policy(@client).update? %>
+  <%= link_to "Edit client", edit_client_path(@client) %>
 <% end %>
