--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,7 +1,7 @@
-<%= form_for @client.new do |f| %>
+<%= form_for @client do |f| %>
   <table>
-  <tr><td>Name : <%= f.text_field :client_name, list: "client_name_autocomplete" %>
-      <datalist id="client_name_autocomplete">
+  <tr><td>Name : <%= f.text_field :name, list: "name_autocomplete" %>
+      <datalist id="name_autocomplete">
         <% Client.all.each do |client| %>
           <option value="<%= client.name %>">
         <% end %>
