--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,7 +1,7 @@
 <h2>Edit Client Page</h2>
 <%= form_for @client do |f| %>
   <table>
-    <tr><td>Client : <%= f.text_field :client_name, list: "client_name_autocomplete" %>
+    <tr><td>Client : <%= f.text_field :name, list: "name_autocomplete" %>
       <datalist id="client_name_autocomplete">
         <% Client.all.each do |client| %>
           <option value="<%= client.name %>">
