--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,19 +1,8 @@
-<%= form_for @client do |f| %>
- <%= f.text_field :client_name, list: "client_name_autocomplete" %>
- <datalist id="client_name_autocomplete">
-   <% Client.all.each do |client| %>
-     <option value="<%= client.name %>">
-   <% end %>
- </datalist>
- <textarea name="client[name]"></textarea>
-<% end %>
-
-<!--<%= form_for @post do |f| %>-->
- <!--<%= f.text_field :category_name, list: "categories_autocomplete" %>-->
- <!--<datalist id="categories_autocomplete">-->
-   <!--<% Category.all.each do |category| %>-->
-     <!--<option value="<%= category.name %>">-->
-   <!--<% end %>-->
- <!--</datalist>-->
- <!--<textarea name="post[content]"></textarea>-->
-<!--<% end %>-->
+<h2>Clients Index Page</h2>
+  <%= @clients.each do |client| %>
+<table>
+  <tr><td></td></tr>
+    <%= link_to " #{client.name}", client_path(client) %>
+  <tr><td></td></tr>
+    <% end %>
+</table>
