--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,12 +2,24 @@
   <tr><td><h3><%= @user.name %> - Main Menu</h3></td></tr>
 <!--<%= @message %>-->
 
-  <tr><td><%= link_to "Training Sessions Index", training_sessions_path %></td></tr>
+  <tr><td><%= link_to "Training Sessions Index", training_sessions_path %></td>
+  <td colspan="2"> </td>
+  <td><%= link_to "Client Index", clients_path %></td>
+  </tr>
   <tr><td> </td></tr>
-  <tr><td><%= link_to "New Training Session", new_training_session_path %></td></tr>
+  <tr><td><%= link_to "New Training Session", new_training_session_path %></td>
+  <td colspan="2"> </td>
+  <td><%= link_to "New Client", new_client_path %></td>
+  </tr>
   <tr><td> </td></tr>
-  <tr><td><%= link_to "Edit Training Session", edit_training_session_path %></td></tr>
+  <tr><td><%= link_to "Edit Training Session", edit_training_session_path %></td>
+  <td colspan="2"> </td>
+  <td><%= link_to "Edit Client", edit_client_path %></td>
+  </tr>
   <tr><td> </td></tr>
-  <tr><td><%= button_to "Log Out", logout_path, method: :delete %></td></tr>
+  <tr><td><%= button_to "Log Out", logout_path, method: :delete %></td>
+
+
+  </tr>
   <tr><td> </td></tr>
 </table>
