--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,5 @@
 <table>
   <tr><td><h3><%= @user.name %> - Main Menu</h3></td></tr>
-<!--<%= @message %>-->
-
   <tr><td><%= link_to "Training Sessions Index", training_sessions_path %></td>
   <td colspan="2"> </td>
   <td><%= link_to "Client Index", clients_path %></td>
@@ -17,9 +15,6 @@
   <td><%= link_to "Edit Client", edit_client_path %></td>
   </tr>
   <tr><td> </td></tr>
-  <tr><td><%= button_to "Log Out", logout_path, method: :delete %></td>
-
-
-  </tr>
+  <tr><td><%= button_to "Log Out", logout_path, method: :delete %></td></tr>
   <tr><td> </td></tr>
 </table>
