--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -5,4 +5,16 @@
     <%= link_to " #{client.name}", client_path(client) %>
   <tr><td></td></tr>
     <% end %>
+
+  <tr><td> </td></tr>
+  <tr><td> </td></tr>
+  <tr><td> </td></tr>
+  <tr><td><%= link_to "Trainer's Main Menu", user_path(current_user), :class => current_class?(@user) %></td><tr>
+  <tr><td> </td></tr>
+  <tr><td><%= link_to "New Client", new_client_path %></td></tr>
+  <tr><td> </td></tr>
+  <tr><td><%= link_to "New Training Session", new_training_session_path %></td></tr>
+  <tr><td> </td></tr>
+  <tr><td><%= button_to "Log Out", logout_path, method: :delete %></td></tr>
+  <tr><td> </td></tr>
 </table>
