--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,5 +1,13 @@
 <h2>Edit Client Page</h2>
 <%= form_for @client do |f| %>
+  <% if @client.errors.any? %>
+    <h2>Errors</h2>
+    <ul>
+      <% @client.full_messages.each do |message| %>
+        <li><%= message %></li>
+    </ul>
+      <% end %>
+  <% end %>
   <table>
     <tr><td>Client : <%= f.text_field :name, list: "name_autocomplete" %>
       <datalist id="client_name_autocomplete">
