--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -3,7 +3,7 @@
   <% if @client.errors.any? %>
     <h2>Errors</h2>
     <ul>
-      <% @client.full_messages.each do |message| %>
+      <% @client.errors.full_messages.each do |message| %>
         <li><%= message %></li>
     </ul>
       <% end %>
