--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -29,6 +29,10 @@
     <%= f.text_field :work_phone %></td></tr>
     <tr><td> </td></tr>
 
+    <tr><td><%= f.label :smart_phone %> :
+    <%= f.text_field :smart_phone %></td></tr>
+    <tr><td> </td></tr>
+
     <tr><td><%= f.submit %></td></tr>
     <tr><td> </td></tr>
   </table>
