--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -17,6 +17,9 @@
   <tr><td>Work Phone: <%= @client.work_phone %></td></tr>
   <tr><td> </td></tr>
 
+  <tr><td>Smart Phone: <%= @client.smart_phone %></td></tr>
+  <tr><td> </td></tr>
+
   <tr><td><%= button_to "Delete Client", client_path, :method=>"delete", :class=>"destroy" %></td></tr>
   <tr><td> </td></tr>
 </table>
