--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,2 +1,3 @@
+NOT BEING USED
 <label for="user_name">Select your name</label>
-<input name="commit" type="submit" value="Log In">
+<input name="commit" type="submit" value="">
