--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -7,18 +7,20 @@
     </ul>
       <% end %>
   <% end %>
-  <div class=”field”>
-    <%= f.label :name %> :
-    <%= f.text_field :name %><br><br>
-  </div>
-  <div class=”field”>
-  <%= f.label :email %> :
-  <%= f.text_field :email %><br><br>
-  </div>
-  <div class=”field”>
-  <%= f.label :password %> :
-  <%= f.text_field :password %><br><br>
-  </div>
-  <%= f.submit %>
+  <table>
+    <tr><td><%= f.label :name %> :
+    <%= f.text_field :name %></td></tr>
+    <tr><td> </td></tr>
+    <tr><td> </td></tr>
+    <tr><td><%= f.label :email %> :
+    <%= f.text_field :email %></td></tr>
+    <tr><td> </td></tr>
+    <tr><td> </td></tr>
+    <tr><td><%= f.label :password %> :
+    <%= f.text_field :password %></td></tr>
+    <tr><td> </td></tr>
+    <tr><td> </td></tr>
+    <tr><td><%= f.submit %></td></tr>
+</table>
 <% end %>
   <!--<a href='/users'>Back</a>-->
