--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,8 @@
-<%= form_for @user do |f| %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+
+  <%= form_for @user do |f| %>
+Users/new => Users/_form
   <% if @user.errors.any? %>
     <h2>Errors</h2>
     <ul>
@@ -20,7 +24,9 @@
     <%= f.text_field :password %></td></tr>
     <tr><td> </td></tr>
     <tr><td> </td></tr>
-    <tr><td><%= f.submit %></td></tr>
+    <tr><td><%= f.submit %>Users/show</td></tr>
 </table>
 <% end %>
+</div>
+  </div>
   <!--<a href='/users'>Back</a>-->
