--- a/app/views/welcome/signup.html.erb
+++ b/app/views/welcome/signup.html.erb
@@ -1,7 +1,25 @@
-<h2>Sign Up Page</h2>
-<%= form_tag signup_path do %>
-  <%= render 'form' %>
-  <%= render partial: 'sessions/form',  locals: {user: @user} %>
+<%= form_for @user do |f| %>
+  <% if @user.errors.any? %>
+    <h2>Errors</h2>
+    <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+    </ul>
+      <% end %>
+  <% end %>
+  <table>
+    <tr><td><%= f.label :name %> :
+    <%= f.text_field :name %></td></tr>
+    <tr><td> </td></tr>
+    <tr><td> </td></tr>
+    <tr><td><%= f.label :email %> :
+    <%= f.text_field :email %></td></tr>
+    <tr><td> </td></tr>
+    <tr><td> </td></tr>
+    <tr><td><%= f.label :password %> :
+    <%= f.text_field :password %></td></tr>
+    <tr><td> </td></tr>
+    <tr><td> </td></tr>
+    <tr><td><%= f.submit %></td></tr>
+</table>
 <% end %>
-
-<!--<%= render partial: 'sessions/form',  locals: {user: @user} %>-->
