--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,6 +1,13 @@
 <%= form_for @client do |f| %>
-
-  <table>
+  <% if @client.errors.any? %>
+    <h2>Errors</h2>
+    <ul>
+      <% @client.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+        </ul>
+   <% end %>
+<table>
   <tr><td>Name : <%= f.text_field :name, list: "name_autocomplete" %>
       <datalist id="name_autocomplete">
         <% Client.all.each do |client| %>
