--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,11 +10,11 @@
   <td colspan="2"> </td>
   <td><%= link_to "New Client", new_client_path %></td>
   </tr>
-  <tr><td> </td></tr>
-  <tr><td><%= link_to "Edit Training Session", edit_training_session_path %></td>
-  <td colspan="2"> </td>
-  <td><%= link_to "Edit Client", edit_client_path %></td>
-  </tr>
+  <!--<tr><td> </td></tr>-->
+  <!--<tr><td><%= link_to "Edit Training Session", edit_training_session_path %></td>-->
+  <!--<td colspan="2"> </td>-->
+  <!--<td><%= link_to "Edit Client", edit_client_path %></td>-->
+  <!--</tr>-->
   <tr><td> </td></tr>
   <tr><td><%= button_to "Log Out", logout_path, method: :delete %></td></tr>
   <tr><td> </td></tr>
