--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,12 +1,14 @@
 <h1>Welcome to your Trainer's App</h1>
-Welcome/home<br>
-<% if session[:user_id] %>
+<!--Welcome/home<br>-->
+<table>
+<tr><td><% if session[:user_id] %>
  <h1><%= @user.name %></h1>
  <h2>Email: <%= @user.email %></h2>
  <h2>Facebook UID: <%= @user.uid %></h2>
  <img src="<%= @user.image %>">
 <% else %>
  <a href='/auth/facebook'>Login with Facebook</a>
-<% end %>
-<li><%= link_to "Sign Up", new_user_path %></li> <!--signup_path-->Users/new => Users/_form
-<li><%= link_to "Sign In", signin_path %></li>Sessions/signin
+<% end %></td></tr>
+<tr><td><li><%= link_to "Sign Up", new_user_path %></li> <!--signup_path--></td></tr><!--Users/new => Users/_form-->
+<tr><td><li><%= link_to "Sign In", signin_path %></li></td></tr><!--Sessions/signin-->
+</table>
