@training_session = current_user.training_sessions.build(training_session_params)     #@training_session = TrainingSession.new(training_session_params)     #@training_session.user = current_user #ties current_user to @training_session.user

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -9,8 +9,9 @@
 </table>
 
  <!--#Display the client's that do not have a training session with the user-->
+ 
 <h3>Clients without Training Sessions</h3>
-  <%= @created_clients.each do |created_client| %>
+  <% @created_clients.each do |created_client| %> 
 <table>    
     <tr><td> </td></tr>
     <tr><td><%= link_to " #{created_client.name}", client_path(created_client) %></td></tr>
