--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,11 +17,11 @@
     <tr><td> </td></tr>
     <tr><td> </td></tr>
     <tr><td><%= f.label :email %>
-    <%= f.text_field :email %></td></tr>
+    <%= f.email_field :email %></td></tr>
     <tr><td> </td></tr>
     <tr><td> </td></tr>
     <tr><td><%= f.label :password %>
-    <%= f.text_field :password %></td></tr>
+    <%= f.password_field :password %></td></tr>
     <tr><td> </td></tr>
     <tr><td> </td></tr>
     <tr><td><%= f.submit %></td></tr><!--Users/show-->
