--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,11 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
            <!--  nav here -->
-           <% if logged_in? %>
+           <% if !logged_in? %>
             <li><%= link_to "Sign Up", new_user_path %></li>
             <li><%= link_to "Sign In", signin_path %></li>
+           <% else %>
+            <%= button_to "Log Out", logout_path, method: :delete %>
             <% end %>
           </ul>
         </div><!--/.nav-collapse -->
