updated routes.rb Created new route in route.rb file   resources :clients, only: [:show] do     # nested resource for training_sessions     resources :training_sessions, only: [:show, :index]   end

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -21,8 +21,9 @@
   <tr><td> </td></tr>
 
 
-
- 
+    <li><%= link_to "View Client Training", client_training_sessions_path(@client) %></li>
+    
+   
   <tr><td><%= button_to "Delete Client", client_path, :method=>"delete", :class=>"destroy" %></td></tr>
   <tr><td> </td></tr>
 </table>
