created individual client new training_session.

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -26,6 +26,12 @@
   <% end %></td></tr>
   <tr><td> </td></tr>
 
+  <tr><td> </td></tr>
+  <tr><td><%= link_to new_client_training_session_path(@client) do %>
+    <strong><span>Create New Training Session for </span><%= @client.name %></strong> 
+  <% end %></td></tr>
+  <tr><td> </td></tr>
+
   <tr><td><%= button_to "Delete Client", client_path, :method=>"delete", :class=>"destroy" %></td></tr>
   <tr><td> </td></tr>
 </table>
