created helpers/training_sessions_helper.rb file.

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -28,7 +28,7 @@
 
   <tr><td> </td></tr>
   <tr><td><%= link_to new_client_training_session_path(@client) do %>
-    <strong><span>Create New Training Session for </span><%= @client.name %></strong> 
+    <span>Create New Training Session for </span><strong><%= @client.name %></strong> 
   <% end %></td></tr>
   <tr><td> </td></tr>
 
