--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -7,7 +7,7 @@
  <h2>Facebook UID: <%= @user.uid %></h2>
  <img src="<%= @user.image %>">
 <% else %>
- <a href='/auth/facebook'>Login with Facebook</a>
+<%= link_to('Log in with Facebook!', '/auth/facebook') %>
 <% end %></td></tr>
 <tr><td><li><%= link_to "Sign Up", new_user_path %></li> <!--signup_path--></td></tr><!--Users/new => Users/_form-->
 <tr><td><li><%= link_to "Sign In", signin_path %></li></td></tr><!--Sessions/signin-->
