--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -8,7 +8,7 @@
         </ul>
    <% end %>
 <table>
-  <tr><td>Name : <%= f.text_field :name, list: "name_autocomplete" %>
+  <tr><td><strong>Name :</strong> <%= f.text_field :name, list: "name_autocomplete" %>
       <datalist id="name_autocomplete">
         <% Client.all.each do |client| %>
           <option value="<%= client.name %>">
@@ -16,27 +16,27 @@
       </datalist></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :email %> :
+    <tr><td><strong><%= f.label :email %> :</strong>
     <%= f.text_field :email %></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :home_address %> :
+    <tr><td><strong><%= f.label :home_address %> :</strong>
     <%= f.text_field :home_address %></td></tr>
     <tr><td> </td></tr>
 
-        <tr><td><%= f.label :home_phone %> :
+        <tr><td><strong><%= f.label :home_phone %> :</strong>
     <%= f.text_field :home_phone %></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :work_address %> :
+    <tr><td><strong><%= f.label :work_address %> :</strong>
     <%= f.text_field :work_address %></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :work_phone %> :
+    <tr><td><strong><%= f.label :work_phone %> :</strong>
     <%= f.text_field :work_phone %></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :smart_phone %> :
+    <tr><td><strong><%= f.label :smart_phone %> :</strong>
     <%= f.text_field :smart_phone %></td></tr>
     <tr><td> </td></tr>
 
