--- a/app/views/welcome/signup.html.erb
+++ b/app/views/welcome/signup.html.erb
@@ -8,15 +8,15 @@
       <% end %>
   <% end %>
   <table>
-    <tr><td><%= f.label :name %> :
+    <tr><td><strong><%= f.label :name %> :</strong>
     <%= f.text_field :name %></td></tr>
     <tr><td> </td></tr>
     <tr><td> </td></tr>
-    <tr><td><%= f.label :email %> :
+    <tr><td><strong><%= f.label :email %> :</strong>
     <%= f.email_field :email %></td></tr>
     <tr><td> </td></tr>
     <tr><td> </td></tr>
-    <tr><td><%= f.label :password %> :
+    <tr><td><strong><%= f.label :password %> :</strong>
     <%= f.password_field :password %></td></tr>
     <tr><td> </td></tr>
     <tr><td> </td></tr>
