--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -9,7 +9,7 @@
         </ul>
    <% end %>
   <table>
-    <tr><td>Client : <%= f.text_field :name, list: "name_autocomplete" %>
+    <tr><td><strong>Client :</strong> <%= f.text_field :name, list: "name_autocomplete" %>
       <datalist id="client_name_autocomplete">
         <% Client.all.each do |client| %>
           <option value="<%= client.name %>">
@@ -17,26 +17,27 @@
       </datalist></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :email %> :
+    <tr><td><strong><%= f.label :email %> :</strong>
     <%= f.text_field :email %></td></tr>
     <tr><td> </td></tr>
-    <tr><td><%= f.label :home_address %> :
+
+    <tr><td><strong><%= f.label :home_address %> :</strong>
     <%= f.text_field :home_address %></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :home_phone %> :
+    <tr><td><strong><%= f.label :home_phone %> :</strong>
     <%= f.text_field :home_phone %></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :work_address %> :
+    <tr><td><strong><%= f.label :work_address %> :</strong>
     <%= f.text_field :work_address %></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :work_phone %> :
+    <tr><td><strong><%= f.label :work_phone %> :</strong>
     <%= f.text_field :work_phone %></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :smart_phone %> :
+    <tr><td><strong><%= f.label :smart_phone %> :</strong>
     <%= f.text_field :smart_phone %></td></tr>
     <tr><td> </td></tr>
 
