Bolded labels on clients/show,html.erb

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,23 +1,23 @@
 <table>
-  <tr><td>Name: <%= @client.name %></td></tr>
+  <tr><td><strong>Name:</strong> <%= @client.name %></td></tr>
   <tr><td> </td></tr>
 
-  <tr><td>Email : <%= @client.email %></td></tr>
+  <tr><td><strong>Email:</strong> <%= @client.email %></td></tr>
   <tr><td> </td></tr>
 
-  <tr><td>Home Adress: <%= @client.home_address %></td></tr>
+  <tr><td><strong>Home Adress:</strong> <%= @client.home_address %></td></tr>
   <tr><td> </td></tr>
 
-  <tr><td>Home Phone: <%= @client.home_phone %></td></tr>
+  <tr><td><strong>Home Phone:</strong> <%= @client.home_phone %></td></tr>
   <tr><td> </td></tr>
 
-  <tr><td>Work Address: <%= @client.work_address %></td></tr>
+  <tr><td><strong>Work Address:</strong> <%= @client.work_address %></td></tr>
   <tr><td> </td></tr>
 
-  <tr><td>Work Phone: <%= @client.work_phone %></td></tr>
+  <tr><td><strong>Work Phone:</strong> <%= @client.work_phone %></td></tr>
   <tr><td> </td></tr>
 
-  <tr><td>Smart Phone: <%= @client.smart_phone %></td></tr>
+  <tr><td><strong>Smart Phone:</strong> <%= @client.smart_phone %></td></tr>
   <tr><td> </td></tr>
 
   <tr><td> </td></tr>
