Bolded labels on clients/form_fields.html.erb

--- a/app/views/clients/form_fields.html.erb
+++ b/app/views/clients/form_fields.html.erb
@@ -1,26 +1,26 @@
 <%= form_for @client.new do |f| %>
   <table>
-    <tr><td><%= f.label :name %> :
+    <tr><td><strong><%= f.label :name %> :</strong>
       <%= f.text_field :name %></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :email %> :
+    <tr><td><strong><%= f.label :email %> :</strong>
       <%= f.text_field :email %></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :home_address %> :
+    <tr><td><strong><%= f.label :home_address %> :</strong>
       <%= f.text_field :home_address %></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :work_address %> :
+    <tr><td><strong><%= f.label :work_address %> :</strong>
       <%= f.text_field :work_address %></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :home_phone %> :
+    <tr><td><strong><%= f.label :home_phone %> :</strong>
       <%= f.text_field :home_phone %></td></tr>
     <tr><td> </td></tr>
 
-    <tr><td><%= f.label :work_phone %> :
+    <tr><td><strong><%= f.label :work_phone %> :</strong>
       <%= f.text_field :work_phone %></td></tr>
     <tr><td> </td></tr>
 
