added : to labels on users/_forms.html.erb

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,15 +12,15 @@
         </ul>
    <% end %>
   <table>
-    <tr><td><strong><%= f.label :name %></strong>
+    <tr><td><strong><%= f.label :name %> :</strong>
     <%= f.text_field :name %></td></tr>
     <tr><td> </td></tr>
     <tr><td> </td></tr>
-    <tr><td><strong><%= f.label :email %></strong>
+    <tr><td><strong><%= f.label :email %> :</strong>
     <%= f.email_field :email %></td></tr>
     <tr><td> </td></tr>
     <tr><td> </td></tr>
-    <tr><td><strong><%= f.label :password %></strong>
+    <tr><td><strong><%= f.label :password %> :</strong>
     <%= f.password_field :password %></td></tr>
     <tr><td> </td></tr>
     <tr><td> </td></tr>
