--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -8,6 +8,16 @@
   <% end %>
 </table>
 
+<table>
+  <tr><td> </td></tr>
+  <tr><td><h3>Search by Client Name:</h3></td></tr>
+    <tr><td><%= form_tag(clients_path, method: :get) do %> 
+    <%= text_field_tag(:search, params[:search]) %> 
+    <%= submit_tag ("Search") %> 
+  <% end %></td></tr>
+</table>
+
+ 
  <!--#Display the client's that do not have a training session with the user-->
  
 <h3>Clients without Training Sessions</h3>
