users/index.html.erb changed link_to link_to  #{user.name} , user_path(user) %> to #{user.name}

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
 
   <tr><td colspan="2"> </td></tr>
 
-  <tr><td><%= link_to " #{user.name}", user_path(user)%></td>
+  <tr><td><%= "#{user.name}"%></td>
       <td align="center"><%= user.training_sessions.count %></td></tr>
   <tr><td colspan="2"> </td></tr>
   <% end %>
